; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/apphelp/extr_apphelp.c_find_tag.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/apphelp/extr_apphelp.c_find_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_AttrInfoSize = common dso_local global i32 0, align 4
@g_Tags_26 = common dso_local global i64* null, align 8
@g_Tags_28 = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @find_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @find_tag(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  store i64 %0, i64* %3, align 8
  %6 = load i32, i32* @g_AttrInfoSize, align 4
  switch i32 %6, label %11 [
    i32 26, label %7
    i32 28, label %9
  ]

7:                                                ; preds = %1
  %8 = load i64*, i64** @g_Tags_26, align 8
  store i64* %8, i64** %5, align 8
  br label %12

9:                                                ; preds = %1
  %10 = load i64*, i64** @g_Tags_28, align 8
  store i64* %10, i64** %5, align 8
  br label %12

11:                                               ; preds = %1
  store i64 -1, i64* %2, align 8
  br label %34

12:                                               ; preds = %9, %7
  store i64 0, i64* %4, align 8
  br label %13

13:                                               ; preds = %30, %12
  %14 = load i64, i64* %4, align 8
  %15 = load i64*, i64** %5, align 8
  %16 = load i64, i64* %4, align 8
  %17 = getelementptr inbounds i64, i64* %15, i64 %16
  %18 = load i64, i64* %17, align 8
  %19 = icmp ult i64 %14, %18
  br i1 %19, label %20, label %33

20:                                               ; preds = %13
  %21 = load i64*, i64** %5, align 8
  %22 = load i64, i64* %4, align 8
  %23 = getelementptr inbounds i64, i64* %21, i64 %22
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* %3, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %20
  %28 = load i64, i64* %4, align 8
  store i64 %28, i64* %2, align 8
  br label %34

29:                                               ; preds = %20
  br label %30

30:                                               ; preds = %29
  %31 = load i64, i64* %4, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %4, align 8
  br label %13

33:                                               ; preds = %13
  store i64 -1, i64* %2, align 8
  br label %34

34:                                               ; preds = %33, %27, %11
  %35 = load i64, i64* %2, align 8
  ret i64 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
